// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button primary 1`] = `
<button
  className="ui button sc-LzLsE dCQing primary"
  onClick={[Function]}
>
  Primary Button
</button>
`;

exports[`Storyshots Button secondary 1`] = `
<button
  className="ui button sc-LzLsE dCQing secondary"
  onClick={[Function]}
>
  Secondary Button
</button>
`;
